--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "Authentication/Authorization, Cookies, Sessions and Routing",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.ts"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/gustavovalle23?tab=repositories"
   },
   "author": "Gustavo Valle",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  }
 }
