--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -14,13 +14,19 @@
   "author": "Gustavo Valle",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "@types/jsonwebtoken": "^8.5.6",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.0",
     "nodemon": "^2.0.15",
+    "prisma": "^3.6.0",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
 }
