--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Authentication/Authorization, Cookies, Sessions and Routing",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon src/server.ts"
   },
   "repository": {
@@ -22,9 +22,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/node": "^17.0.0",
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15",
     "prisma": "^3.6.0",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
