--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "authentication-system",
+  "name": "authentication-system-express",
   "version": "0.0.1",
   "description": "",
-  "author": "Gustavo Valle",
-  "private": false,
-  "license": "MIT",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -24,7 +24,6 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@prisma/client": "^3.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -44,7 +43,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
-    "prisma": "^3.13.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
